--- a/DSA01-Intro/DSA_2017.tex
+++ b/DSA01-Intro/DSA_2017.tex
@@ -39,6 +39,8 @@
 %---------------------------------------------------------
 \section{Miscellenea} 
 
+
+
 \begin{frame}[t]
   \frametitle{Text Book}
 Fundamentals of Data Structure in C, 2nd Ed.
@@ -47,6 +49,11 @@ by Horowitz, Sahni, and Anderson-Freed
 
 
 \url{http://www.cise.ufl.edu/~sahni/fdsc2ed/}
+
+Presentations are uploaded in 
+\begin{itemize}
+\item \url{https://github.com/resourceful/lecture_dsa2017-1}
+\end{itemize}
 \end{frame}
 
 \begin{frame}[t]{Contact}
