--- a/DSA01-Intro/DSA_2017_01.tex
+++ b/DSA01-Intro/DSA_2017_01.tex
@@ -950,7 +950,7 @@ f(n) &\leq  |a_k|·n^k + |a_{k-1}|·n^{k-1} +...+ |a_1|\cdot n + |a_0| \\
 \item should be as large a function of n as possible
 \end{itemize}
 
-\textbf{theorem)} if $f(n) = a_mn^m + ... + a_1n + a_0 and am > 0$, then $f(n) = \Omega(n^m)$
+\textbf{theorem)} if $f(n) = a_mn^m + ... + a_1n + a_0$ and $am > 0$, then $f(n) = \Omega(n^m)$
 \end{frame}
 
 \begin{frame}[t]
