--- a/DSA03-Array/DSA_2017_03.tex
+++ b/DSA03-Array/DSA_2017_03.tex
@@ -823,6 +823,8 @@ starting\_pos= & 1 & 3 & 4 & 6 & 8 & 8\\
 \end{itemize}
 \end{frame}
 
+
+\begin{comment}
 \section{Representation of Multidimensional Arrays}
 
 
@@ -917,12 +919,7 @@ $\&a[i_0][i_1][i_{n-1}]$
 \end{frame}
 
 
-\begin{frame}[t, fragile]
-  \frametitle{Representation of Multidimensional Arrays}
-
-\end{frame}
-
-
+\end{comment}
 
 
 
