manuscript revised, multi-{stack, queue} commented out

--- a/DSA05-SQ/DSA_2017_05.tex
+++ b/DSA05-SQ/DSA_2017_05.tex
@@ -983,7 +983,7 @@ complexity
 \end{itemize}
 \end{frame}
 
-
+\begin{comment}
 \section{Multiple Stacks Queues} 
 \begin{frame}[t]
   \frametitle{Multiple Stacks and Queues}
@@ -1134,5 +1134,5 @@ Ex. \texttt{n = 5, m = 20, push(1, x)}
   \item data movement: O(m)
   \end{enumerate}
 \end{frame}
-
+\end{comment}
 \end{document}
