--- a/DSA07-Tree/DSA_2017_07.tex
+++ b/DSA07-Tree/DSA_2017_07.tex
@@ -1067,7 +1067,7 @@ time complexity for deleting
 
 
 \begin{frame}[t]
-  \frametitle{Deleting a leaf or a node with 1 child}
+  \frametitle{Deleting a leaf or a node with a child}
   \begin{tabular}{p{0.44\textwidth} p{0.44\textwidth}}
 Initial BST
 
@@ -1081,6 +1081,21 @@ Delete 35 (leaf)
 Delete 40 (node with single child)
 
     \includegraphics[height=0.3\textheight]{./figures/fig17_bst_delete2.png}
+\\
+  \end{tabular}
+\end{frame}
+
+
+\begin{frame}[t]
+  \frametitle{Deletion of a node with two children}
+  \begin{tabular}{p{0.44\textwidth} p{0.44\textwidth}}
+Tree before deletion of 60
+
+    \includegraphics[width=0.4\textwidth]{./figures/fig17_bst_delete3.png}
+&
+Tree after deletion of 60
+
+    \includegraphics[width=0.4\textwidth]{./figures/fig17_bst_delete4.png}
 \\
   \end{tabular}
 \end{frame}
