revised, code added for binary tree

--- a/DSA07-Tree/DSA_2017_07.tex
+++ b/DSA07-Tree/DSA_2017_07.tex
@@ -148,7 +148,7 @@ Two types of representation of tree
 Two types of nodes
   \begin{enumerate}
   \item Node with data
-  \item node with the reference
+  \item Node with the reference
   \end{enumerate}
 
 The information in the root node comes first and it is followed by a list of the subtrees of that node
