--- a/DSA07-Tree/DSA_2017_07.tex
+++ b/DSA07-Tree/DSA_2017_07.tex
@@ -684,18 +684,22 @@ int equal(tree_ptr first, tree_ptr second) {
 \begin{frame}[t, fragile]
   \frametitle{Heap Structure}
   \begin{lstlisting}
-#define MAX_ELEMENTS 200
-#define HEAP_FULL(n) (n == MAX_ELEMENTS - 1) 
-#define HEAP_EMPTY(n) (!n)
+#define MAX_ELEMENT 200
 
 typedef struct {
-    int key;
-    /* other field */ 
+	int key; // may include other fields
 } element;
 
-element heap[MAX_ELEMENTS]; 
-int n = 0;    
+typedef struct {
+	element heap[MAX_ELEMENT];
+	int heap_size;
+} HeapType;
+
+void init(HeapType *h){
+	h->heap_size = 0;
+}
   \end{lstlisting}
+\label{lst:heapstruct}
 \end{frame}
 
 
@@ -715,7 +719,6 @@ int n = 0;
   \end{center}
 
 \end{frame}
-
 
 \begin{frame}[t]
   \frametitle{Priority Queues}
@@ -796,19 +799,22 @@ Insert 35 into heap
 
 \begin{frame}[t, fragile]
   \frametitle{Insertion into a max heap}
+
+Refer to \ref{lst:heapstruct} for definitions and sturctures
+
   \begin{lstlisting}
-void insert_max_heap(element item, int *n) { 
+// add item to the heap
+void insert_max_heap(HeapType *h, element item){
     int i;
-    if (HEAP_FULL(*n)) {
-        fprintf(stderr,"The heap is full. \n"); 
-        exit(1);
+    i = ++(h->heap_size); // increase the heap
+
+    // traverse to the top of the max heap tree
+    // if item is lareger than the parent's item (heap[i/2].key)
+    while((i != 1) && (item.key > h->heap[i/2].key)){
+        h->heap[i] = h->heap[i/2];
+	i /= 2;
     }
-    i = ++(*n);
-    while ((i != 1 ) && (item.key > heap[i/2].key)) {
-        heap[i] = heap[i/2]; 
-        i /= 2;
-    }
-    heap[i] = item;     
+    h->heap[i] = item; // add new node to the heap
 }
   \end{lstlisting}
 \end{frame}
@@ -862,31 +868,43 @@ Final heap
 \end{frame}
 
 
-\begin{frame}[t, fragile]
+\begin{frame}[t, fragile, allowframebreaks]
   \frametitle{Deletion from a max heap}
+
+Refer to \ref{lst:heapstruct} for definitions and sturctures
   \begin{lstlisting}
-element delete_max_heap(int *n) { 
+// delete the item
+element delete_max_heap(HeapType *h){
+    int parent, child;
     element item, temp;
-    if (HEAP_EMPTY(*n)) {
-        fprintf(stderr,"The heap is empty\n");
-        exit(1); 
+
+    item = h->heap[1]; // take the max value from the heap
+    temp = h->heap[(h->heap_size)--]; // reduce the heap size
+
+    // initial position
+    parent = 1;
+    child  = 2;
+
+    while( child <= h->heap_size ){ // within the heap
+	// loop until counted number of child is less the the heap size
+	// find the larger key in the heap
+	if( ( child < h->heap_size ) &&
+            ( h->heap[child].key ) < h->heap[child+1].key )
+		child++;
+
+	// if found key is smaller than the last key in the tree 
+	// take the last key
+	if( temp.key >= h->heap[child].key )
+		break;
+
+	// take the child and advance
+	h->heap[parent] = h->heap[child];
+	parent = child;
+	child *= 2; // increase the position
     }
-    item = heap[1];
-    temp = heap[(*n)--]; 
-    parent = 1; 
-    child = 2; 
-    while (child <= *n) {
-    /* compare left and right child’s key values */ 
-        if ((child < *n) && (heap[child].key <
-                             heap[child+1].key))
-            child++;
-        if (temp.key >= heap[child].key) break; 
-        /* move to the next lower level */ 
-        heap[parent] = heap[child];
-        parent = child;
-        child *= 2;
-    }
-    heap[parent] = temp; return item;
+
+    h->heap[parent] = temp;
+    return item; // return the deleted value
 }    
   \end{lstlisting}
 \end{frame}
