--- a/DSA07-Tree/DSA_2017_07.tex
+++ b/DSA07-Tree/DSA_2017_07.tex
@@ -812,7 +812,7 @@ void insert_max_heap(HeapType *h, element item){
     // if item is lareger than the parent's item (heap[i/2].key)
     while((i != 1) && (item.key > h->heap[i/2].key)){
         h->heap[i] = h->heap[i/2];
-	i /= 2;
+        i /= 2;
     }
     h->heap[i] = item; // add new node to the heap
 }
@@ -886,21 +886,21 @@ element delete_max_heap(HeapType *h){
     child  = 2;
 
     while( child <= h->heap_size ){ // within the heap
-	// loop until counted number of child is less the the heap size
-	// find the larger key in the heap
-	if( ( child < h->heap_size ) &&
+        // loop until counted number of child is less the the heap size
+        // find the larger key in the heap
+        if( ( child < h->heap_size ) &&
             ( h->heap[child].key ) < h->heap[child+1].key )
-		child++;
+            child++;
 
-	// if found key is smaller than the last key in the tree 
-	// take the last key
-	if( temp.key >= h->heap[child].key )
-		break;
+        // if found key is smaller than the last key in the tree 
+        // take the last key
+        if( temp.key >= h->heap[child].key )
+            break;
 
-	// take the child and advance
-	h->heap[parent] = h->heap[child];
-	parent = child;
-	child *= 2; // increase the position
+        // take the child and advance
+        h->heap[parent] = h->heap[child];
+        parent = child;
+        child *= 2; // increase the position
     }
 
     h->heap[parent] = temp;
@@ -960,6 +960,9 @@ can perform these operations both
 \end{frame}
 
 
+
+
+
 \begin{frame}[t, fragile]
   \frametitle{Searching a BST}
 
@@ -1011,17 +1014,45 @@ tree_ptr iter_search(tree_ptr tree, int key) {
 \end{frame}
 
 
-\begin{frame}[t, fragile]
+\begin{frame}[t, fragile, allowframebreaks]
   \frametitle{Inserting into a BST}
   \begin{lstlisting}
+#include <stdio.h>
+#include <stdlib.h>
+
+// tree node data structure
+typedef struct node *tree_ptr;
+typedef struct node {
+	int data;
+	tree_ptr left_child, right_child;
+} node;
+
+
+// modification of recursive search
+// returns the node 
+tree_ptr compare(tree_ptr root, int key){
+    if (!root) return NULL;
+    if (key < root->data){
+       root->left_child = compare(root->left_child, key);
+       return root;
+    } else {
+       root->right_child = compare(root->right_child, key);
+       return root;
+    }
+    return root;
+}
+
+// insert the new value
 void insert_node(tree_ptr *node, int num) { 
-    tree_ptr ptr, temp = modified_search(*node, num); 
+    tree_ptr ptr;
+    tree_ptr temp;
+    temp = compare(*node, num); 
     if (temp || !(*node)) {
         ptr = (tree_ptr)malloc(sizeof(node)); 
-        if (IS_FULL(ptr)) {
-            fprintf(stderr,"The memory is full\n"); 
-            exit(1);
-        }
+        //if (IS_FULL(ptr)) {
+         //   fprintf(stderr,"The memory is full\n"); 
+          //  exit(1);
+        //}
         ptr->data = num;
         ptr->left_child = ptr->right_child = NULL; 
         if (*node)
@@ -1032,6 +1063,15 @@ void insert_node(tree_ptr *node, int num) {
         else *node=ptr; 
     }
 }
+
+
+int main(){
+	tree_ptr *new;
+	insert_node(new, 3);
+	insert_node(new, 4);
+	insert_node(new, 5);
+	return 0;
+}
  \end{lstlisting}
 \end{frame}
 
@@ -1039,8 +1079,7 @@ void insert_node(tree_ptr *node, int num) {
 \begin{frame}[t, fragile]
   \frametitle{Inserting into a BST}
 
-FIGURE-CODE??
-\textbf{modified\_search} is slightly modified version of function \textbf{iter\_search}
+
 \begin{itemize}
 \item return NULL, if the tree is empty or num is present
 \item otherwise, return a pointer to the last node of the tree that
