--- a/DSA09-Graph2/DSA_2017_09.tex
+++ b/DSA09-Graph2/DSA_2017_09.tex
@@ -607,7 +607,7 @@ A tree can be thought of as connected graph that has no cycles
 \begin{frame}[t]
   \frametitle{Edge Selection Greedy Strategies}
   \begin{itemize}
-  \item Start with an $n-vertex$ $0-edge$ forest. Consider edges in ascending order of cost. Select edge if it does not form a cycle together with already selected edges.
+  \item Start with an $n-vertex$, $0-edge$ forest. Consider edges in ascending order of cost. Select edge if it does not form a cycle together with already selected edges.
     \begin{itemize}
     \item Kruskal's algorithm
     \end{itemize}
